@@ -17,3 +17,7 @@
 	* AtcLoader.java 		 	 - completed, but need to implement unit tests.
 	* AirTrafficControl.java 	 - uncompleted, need to implement the schedule method using the GA core!
 	
+TODOs:
+
+	* Population: implements the getMostAdaptedIndividual method.
+	* GeneticAlgorithm: implements all unimplemented methods.
